--- a/Udajahaja/udajahaja/src/app/components/admin-header/admin-header.component.html
+++ b/Udajahaja/udajahaja/src/app/components/admin-header/admin-header.component.html
@@ -13,7 +13,7 @@
             <li class="menu"><a style="color:white;" [routerLink]="['/adminHome']">Manage Airlines</a></li>
             <li class="menu"><a style="color:white;"[routerLink]="['/scheduling']">Manage Schedules</a></li>
             <li class="menu"><a style="color:white;" [routerLink]="['/discount']">Manage Discounts</a></li>
-            <li class="menu">Reports</li>
+            <li class="menu"><a style="color:white;" [routerLink]="['/reports']">Reports</a></li>
         </ul>
     </div>
     
