--- a/Udajahaja/udajahaja/src/app/components/reports/reports.component.html
+++ b/Udajahaja/udajahaja/src/app/components/reports/reports.component.html
@@ -1,1 +1,5 @@
-<p>reports works!</p>
+<div class="header">
+    
+    <app-admin-header></app-admin-header>   
+</div>
+<h1 style="position: absolute;top: 25%;text-align: center;">Report page</h1>
