--- a/Udajahaja/udajahaja/src/app/components/error/error.component.html
+++ b/Udajahaja/udajahaja/src/app/components/error/error.component.html
@@ -5,6 +5,8 @@
     <app-header></app-header>
 
 </div>
-<div  style="position: absolute;top: 40%;left: 30%;">
-<h1>Booking History</h1>
+<body class="body"></body>
+<div style="position: absolute;text-align: center;top: 30%;left: 40%;">
+<h1>UNAUTHERIZED ACCESS</h1>
 </div>
+<body></body>
