--- a/Udajahaja/udajahaja/src/app/components/header/header.component.html
+++ b/Udajahaja/udajahaja/src/app/components/header/header.component.html
@@ -7,9 +7,9 @@
     <div class="flag"></div>
     <div class="menuContainer">
         <ul>
-            <li class="menu">Book Flights</li>
-            <li class="menu">Manage Booking</li>
-            <li class="menu">Booking History</li>
+            <li class="menu"><a [routerLink]="['']" style="color: white;">Book Flights</a></li>
+            <li class="menu"><a [routerLink]="['/manageBooking']" style="color: white;">Manage Booking</a></li>
+            <li class="menu"><a [routerLink]="['/bookingHistory']" style="color: white;">Booking History</a></li>
             
         </ul>
     </div>
